    - https://sourceforge.net/p/refind/code/ci/dc211965727921bf8e9440fdab5e147795ce9584/
  * Memory leak and garbled JPEG when compiled on some Linux distributions
    - https://sourceforge.net/p/refind/code/ci/8825e5e815b4be3708edd7b8d9fa3ea658094d3b/
  * Apparent Memory Allocation Conflict
    - https://sourceforge.net/p/refind/code/ci/5e2d0ac3fb76a8daab3a8199d0b0c52dc792b84f/
- Improves `AcquireGOP` Feature
  * Now handles uncompressed OptionROMs
  * None encountered to date but theoretically possible
- Improves `AlsoScan` Feature
  * The '@root/boot' path was added to the default 'also_scan_dirs' list
- Improves Generic Menu Handling
  * Now provides a `Return to Main Menu` option on all such menus
- Exposes `MitigatePrimedBuffer` Feature for User Configuration
  * Previously activated by default on all types of firmware
  * A limited base implementation is always active on Non-Apple firmware
  * Can now be extended on by activating a new `mitigate_primed_buffer` token
  * The feature does not operate on Apple firwmare regardless of the token setting


0.13.3.AD (07 Mar 23):
-----------------------
- Fixes Manual Stanza SubMenuEntries
  * A memory conflict meant that including such entries resulted in RefindPlus hanging
- Fixes UGA Graphics
  * Addresses issue of `UGA-Only` GPUs being always forced into TextOnly mode
- Fixes Misc Alt Build Function Duplication Issues
  * Addresses issues reported using the build process at https://github.com/xaionaro/edk2-builder-docker
    - Updates `LodePNG` to Version 20221108
    - Deduplicates `DebugLog` function and aligns calling convention
- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed
- Fixes Invalid `ShowTools` Entry Handling
  * Such invalid entries were previously only flagged and not actually handled
  * These are now additionally skipped
- Improves `DefaultSelection` Feature