@@ -177,6 +177,8 @@ REFIT_CONFIG GlobalConfig = {
     /* *MacOSRecoveryFiles = */ NULL,
     /* *DriverDirs = */ NULL,
     /* *IconsDir = */ NULL,
+    /* *LinuxPrefixes = */ NULL,
+    /* *LinuxMatchPatterns = */ NULL,
     /* *SetBootArgs = */ NULL,
     /* *ExtraKernelVersionStrings = */ NULL,
     /* *SpoofOSXVersion = */ NULL,
